--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,18 @@ li:last-child {
 	width: 59px;
 	height: 66px;
 }
+li:first-child:hover {
+	background:url('hero_spritesheet.png') no-repeat -335px -112px;
+	width: 37px;
+	height: 67px;
+}
+li:nth-child(2):hover {
+	background: url('hero_spritesheet.png') no-repeat -411px -112px;
+	width: 38px;
+	height: 67px;
+}
+li:last-child:hover {
+	background: url('hero_spritesheet.png') no-repeat -563px -17px;
+	width: 58px;
+	height: 66px;
+}
